Closed Bug 1273365 Opened 8 years ago Closed 8 years ago

background-clip: text in the presence of filter: drop-shadow() rendering error

Categories

(Core :: Layout: Text and Fonts, defect)

49 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: percyley, Assigned: ethlin)

References

Details

Attachments

(4 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36




Expected results:

Usually drop-shadow() should not be clip.
Attached image Chrome-test.png
Attached image Firefox-test.png
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(cku)
Assignee: nobody → cku
Flags: needinfo?(cku)
Blocks: 1264905
Status: NEW → ASSIGNED
Assignee: cku → ethlin
I think the problem is due to generating mask with filter effect. So I check IsForGenerateGlyphMask first before doing filter to solve the problem.
Attachment #8771928 - Flags: review?(jfkthame)
Comment on attachment 8771928 [details] [diff] [review]
check if GlyphMask before filtering

Review of attachment 8771928 [details] [diff] [review]:
-----------------------------------------------------------------

This looks OK to me, thanks.

(I notice from the testcase here that there's also a bad interaction between background-clip:text and opacity in text-shadow. I've filed bug 1287705 for that, as it's a separate issue.)
Attachment #8771928 - Flags: review?(jfkthame) → review+
Ethan, could you follow up this bug as long as the try result is good ?
Flags: needinfo?(ethlin)
Okay, the try server result:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=3f21b3f48719
Flags: needinfo?(ethlin)
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/617d265cfec4
Check IsForGenerateGlyphMask before doing mask. r=jfkthame
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/617d265cfec4
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: