Bug 1273365 - Check IsForGenerateGlyphMask before doing mask. r=jfkthame